--- a/Transformers.ipynb
+++ b/Transformers.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "mount_file_id": "13EvKUch7t2q3Puz-xy5-b1OJSrsIm_Fp",
+      "authorship_tag": "ABX9TyM+JadQ6P91A2lr0u8jTihH"
     },
     "kernelspec": {
       "name": "python3",
