--- a/Word2Vec.ipynb
+++ b/Word2Vec.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMf8iA7+aYnvryMju+jfqP7",
+      "authorship_tag": "ABX9TyPRQJMpGa4IfeBW67pygg6Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,8 +225,8 @@
         "    return vocab\n",
         "\n",
         "\n",
-        "def get_data_iterator(data_type, data_dir):\n",
-        "    data_iter = WikiText103(root=data_dir, split=data_type)\n",
+        "def get_data_iterator(data_type):\n",
+        "    data_iter = WikiText103(split=data_type)\n",
         "    data_iter = to_map_style_dataset(data_iter)\n",
         "    return data_iter\n",
         "\n",
@@ -253,8 +253,8 @@
         "    return batch_input, batch_output\n",
         "\n",
         "\n",
-        "def get_data_loader_and_vocab(data_type, data_dir, batch_size, shuffle, vocab=None):\n",
-        "    data_iter = get_data_iterator(data_type, data_dir)\n",
+        "def get_data_loader_and_vocab(data_type, batch_size, shuffle, vocab=None):\n",
+        "    data_iter = get_data_iterator(data_type)\n",
         "    tokenizer = get_tokenizer(\"basic_english\", language=\"en\")\n",
         "    if vocab is None:\n",
         "        vocab = build_vocab(data_iter, tokenizer)\n",
@@ -286,14 +286,12 @@
         "\n",
         "    train_data_loader, vocab = get_data_loader_and_vocab(\n",
         "        data_type=\"train\",\n",
-        "        data_dir=config[\"data_dir\"],\n",
         "        batch_size=config[\"train_batch_size\"],\n",
         "        shuffle=config[\"shuffle\"],\n",
         "    )\n",
         "\n",
         "    val_data_loader, _ = get_data_loader_and_vocab(\n",
         "        data_type=\"valid\",\n",
-        "        data_dir=config[\"data_dir\"],\n",
         "        batch_size=config[\"val_batch_size\"],\n",
         "        shuffle=config[\"shuffle\"],\n",
         "        vocab=vocab,\n",
@@ -337,7 +335,6 @@
       "cell_type": "code",
       "source": [
         "config = {\n",
-        "    \"data_dir\": \"data/\",\n",
         "    \"train_batch_size\": 64,\n",
         "    \"val_batch_size\": 64,\n",
         "    \"shuffle\": True,\n",
@@ -346,7 +343,7 @@
         "    \"train_steps\": None,\n",
         "    \"val_steps\": None,\n",
         "    \"checkpoint_frequency\": 2,\n",
-        "    \"model_dir\": \"weights/\",\n",
+        "    \"model_dir\": \"/content/drive/MyDrive/Word2Vec\",\n",
         "}\n",
         "\n",
         "train(config)"
